--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,11 +126,11 @@
     <%= link_to '新規投稿商品',new_item_path , class: "subtitle" %>
     <ul class='item-lists'>
 
-      <% if @items.present?%>
-        <% @items.each do |item| %>
-        <li class='list'>
+      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <li class='list'>
+        <%= link_to "#" do %>
         <div class='item-img-content'>
-          <%= link_to image_tag(item.image , class: "item-img"),item_path(item.id) %>
+          <%= image_tag "item-sample.png", class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
@@ -141,10 +141,10 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= link_to item.name %>
+            <%= "商品名" %>
           </h3>
           <div class='item-price'>
-            <span><%= item.selling_price %>円<br>(税込み)</span>
+            <span><%= "販売価格" %>円<br>(税込み)</span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
@@ -153,8 +153,10 @@
         </div>
         <% end %>
       </li>
+      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
-      <% else %>
+      <%# 商品がない場合のダミー %>
+      <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
@@ -171,8 +173,9 @@
           </div>
         </div>
         <% end %>
-        <% end %>
       </li>
+      <%# //商品がある場合は表示されないようにしましょう %>
+      <%# /商品がない場合のダミー %>
     </ul>
   </div>
   <%# /商品一覧 %>
