--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -35,7 +35,11 @@
 
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%else%>
-    <%= link_to '購入画面に進む',  item_orders_path(@item) ,class:"item-red-btn"%>
+     <% if user_signed_in?%>
+     <%= link_to '購入画面に進む',  item_orders_path(@item) ,class:"item-red-btn"%>
+     <% else %>
+     <%= link_to '購入画面に進む', new_user_session_path ,class:"item-red-btn"%>
+     <%end%>
     <%end%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
